--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,12 @@
 <app-header></app-header>
-  <div class="container-fluid text-white bg-dark p-5">
+  <div class="container-fluid text-white bg-black p-5">
     <div class="text-center mb-5 d-flex w-100 align-items-center justify-content-center gap-4" style="height: 10em;">
         <section>
-            <h2>Unimos a músicos locales</h2>
-            <button class="btn btn-light mt-3">Unete</button>
+            <h2 class="title-xl">Unimos a músicos locales</h2>
+            <button class="btn btn-light mt-3" [routerLink]="['/registrate']" routerLinkActive="router-link-active" >Unete</button>
         </section>
         <section class="h-100">
-            <img src="assets/img/band-icon.png" alt="Icono de una Banda" class="h-100">
+            <img src="assets/img/band-icon.png" alt="Icono de una Banda" class="h-100 img-fluid">
         </section>
     </div>
 
@@ -17,7 +17,7 @@
             <section>
                 <h3 class="card-title">Bandas</h3>
                 <p class="card-text">Encuentra a bandas con las que compartir tu talento</p>
-                <a href="/login" class="btn btn-light">Buscar</a>
+                <a href="/registro" class="btn btn-light">Buscar</a>
             </section>
             <section>
                 <img src="assets/img/band-icon-main.png" alt="Icono de una banda">
@@ -31,7 +31,7 @@
                 <div class="card-body">
                   <h3 class="card-title">Musicos</h3>
                   <p class="card-text">Encuentra a bandas con las que compartir tu talento</p>
-                  <button class="btn btn-light">Buscar</button>
+                  <a href="/REGISTRO"><button class="btn btn-light">Buscar</button></a>
                 </div>
             </section>
             <section>
