--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,25 +1,28 @@
-<main class="d-flex flex-column h-100 justify-content-center align-items-center main-login">
-  <h1 class="mb-4">Bienvenido</h1>
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-login">
-    @if(error_message()){
-     <div class="alert alert-danger" role="alert">{{error_message()}}</div>
-    }
-    <div class="mb-3">
-      <label for="email" class="form-label">Email</label>
-      <input type="email" class="form-control" id="email" formControlName="email">
-      <div *ngIf="submitted() && loginForm.controls['email'].invalid" class="text-danger">
-        <div *ngIf="loginForm.controls['email'].errors?.['required']">El email es obligatorio.</div>
-        <div *ngIf="loginForm.controls['email'].errors?.['pattern']">El email no es válido.</div>
+<main class="d-flex flex-column h-100 w-100 justify-content-center align-items-center main-login bg-black">
+  <div class="container"> 
+    <h1 class="mb-4 title-form">Bienvenido</h1>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-login w-100">
+      @if(error_message()){
+      <div class="alert alert-danger" role="alert">{{error_message()}}</div>
+      }
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" class="form-control" id="email" formControlName="email">
+        <div *ngIf="submitted() && loginForm.controls['email'].invalid" class="text-danger">
+          <div *ngIf="loginForm.controls['email'].errors?.['required']">El email es obligatorio.</div>
+          <div *ngIf="loginForm.controls['email'].errors?.['pattern']">El email no es válido.</div>
+        </div>
       </div>
-    </div>
-    <div class="mb-3">
-      <label for="password" class="form-label">Password</label>
-      <input type="password" class="form-control" id="password" formControlName="password">
-      <div *ngIf="submitted() && loginForm.controls['password'].invalid" class="text-danger">
-        <div *ngIf="loginForm.controls['password'].errors?.['required']">La contraseña es obligatoria.</div>
-        <div *ngIf="loginForm.controls['password'].errors?.['minlength']">La contraseña debe tener al menos 8 caracteres.</div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input type="password" class="form-control" id="password" formControlName="password">
+        <div *ngIf="submitted() && loginForm.controls['password'].invalid" class="text-danger">
+          <div *ngIf="loginForm.controls['password'].errors?.['required']">La contraseña es obligatoria.</div>
+          <div *ngIf="loginForm.controls['password'].errors?.['minlength']">La contraseña debe tener al menos 8 caracteres.</div>
+        </div>
       </div>
-    </div>
-    <button type="submit" class="btn btn-primary w-100">Enviar</button>
-  </form>
+      <button type="submit" class="btn btn-primary w-100">Enviar</button>
+      <a href="/registrate" class="btn btn-link">Registrarse</a>
+    </form>
+  </div>
 </main>
