--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,11 +1,15 @@
-<header class="bg-dark text-white p-3">
+<header class="bg-black text-white p-3">
     <div class="container-fluid d-flex justify-content-around align-items-center">
       <div class="logo">
         <h1 class="mb-0">Tempo Together</h1>
       </div>
       <div class="d-flex align-items-center">
         <input type="text" class="form-control mr-2" placeholder="Encuentra Bandas">
-        <button class="btn btn-secondary">Login</button>
+        @if(!logged()){
+          <a routerLink="/login"><button class="btn btn-secondary">Login</button></a>
+        }@else {
+          <button class="btn btn-secondary" (click)="cerrarSesion()">Logout</button>     
+        }
       </div>
     </div>
   </header>
