--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url("../node_modules/bootstrap/dist/css/bootstrap.min.css");
+@import url("../node_modules/bootstrap/dist/css/bootstrap-utilities.css");
+
+@import url('assets/fonts/Thunder-SemiBoldLC.css');
+@import url('assets/fonts/Thunder-BlackLC.css');
+
+body{
+    font-family: "Manrope";
+    font-optical-sizing: auto;
+    font-style: normal;
+}
