--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,7 +17,7 @@
             <section>
                 <h3 class="card-title">Bandas</h3>
                 <p class="card-text">Encuentra a bandas con las que compartir tu talento</p>
-                <a href="/registro" class="btn btn-light">Buscar</a>
+                <a href="/registrate" class="btn btn-light">Buscar</a>
             </section>
             <section>
                 <img src="assets/img/band-icon-main.png" alt="Icono de una banda">
