--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -4,7 +4,8 @@
 }
 
 .main-register{
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
 }
 .title-form{
   font-family: "ThunderBlack";
@@ -26,4 +27,23 @@
   margin-top: 0.5rem;
   font-weight: bold;
   color: #ffffff;
+}
+
+
+.map-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 30px;
+}
+
+.map-frame {
+  border: 2px solid black;
+  height: 100%;
+}
+
+#map {
+  height: 100%;
 }
