--- a/src/app/pages/home-user/home-user.component.html
+++ b/src/app/pages/home-user/home-user.component.html
@@ -1,3 +1,28 @@
 <app-header></app-header>
-<p>home-user works!</p>
-<span>{{user}}</span>
+<main class="bg-black main">
+    <article class="container pt-4 text-light">
+        <section class="row">
+            <div class="w-100 d-flex justify-content-between align-items-center pb-2 mb-4 border-bottom">
+                <h1 class="title-form">Band Requests</h1>
+                <a routerLink="/">Ver todas </a>
+            </div>
+            @for (request of getRequest(); track user.id) {
+                <div class="col-6 mb-4">
+                    <app-request [request]="request" class="request"></app-request>
+                </div>      
+            }
+        </section>
+        <section class="row">
+            <div class="w-100 d-flex justify-content-between align-items-center pb-2 mb-4 border-bottom">
+                <h1 class="title-form">Concerts</h1>
+                <a routerLink="/">Ver todas </a>
+            </div>
+            @for (concert of getConcerts(); track concert.id) {
+                <div class="col-6 mb-4">
+                    <app-concert [concert]="concert" class="concert"></app-concert>
+                </div>
+            }
+        </section>
+
+        </article>
+</main>
