--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,32 +1,24 @@
 <main class="d-flex flex-column w-100 justify-content-center align-items-center main-register bg-black">
   <div class="container">
     <h1 class="mb-4 title-form text-white text-center">Registrate</h1>
-
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="card  bg-black text-light" >
-        <div class="card-body">
-          <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-            <div *ngIf="step === 1">
-              <div class="form-group text-center">
-                <label>Selecciona el tipo:</label>
-                <div class="d-flex justify-content-center">
-                  <div class="image-select mr-3 d-flex flex-column" [class.selected]="registerForm.controls['type'].value === 'musician'" (click)="selectType('musician')">
-                    <img src="assets/img/musician-icon.png" alt="Músico" class="">
-                    <span>Músico</span>
-                  </div>
-                  <div class="image-select d-flex flex-column" [class.selected]="registerForm.controls['type'].value === 'band'" (click)="selectType('band')">
-                    <img src="assets/img/band-icon.png" alt="Banda" class="">
-                    <span>Banda</span>
-                  </div>
-                </div>
+  
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card bg-black text-light">
+          <div class="card-body">
+            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+              <div class="form-group">
+                <label for="type">Tipo</label>
+                <select class="form-control" id="type" formControlName="type">
+                  <option value="">Selecciona el tipo</option>
+                  <option value="musician">Músico</option>
+                  <option value="band">Banda</option>
+                </select>
                 <div *ngIf="submitted && registerForm.controls['type'].invalid" class="text-danger mt-2">
                   El tipo es obligatorio.
                 </div>
               </div>
-              <button type="button" class="btn btn-primary w-100" (click)="nextStep()">Siguiente</button>
-            </div>
-            <div *ngIf="step === 2">
+
               <div class="form-group">
                 <label for="username">Nombre de usuario</label>
                 <input type="text" class="form-control" id="username" formControlName="username">
@@ -35,6 +27,7 @@
                   <div *ngIf="registerForm.controls['username'].errors?.['maxlength']">El nombre de usuario no puede superar los 12 caracteres.</div>
                 </div>
               </div>
+              
               <div class="form-group">
                 <label for="name">Nombre</label>
                 <input type="text" class="form-control" id="name" formControlName="name">
@@ -44,6 +37,7 @@
                   <div *ngIf="registerForm.controls['name'].errors?.['maxlength']">El nombre no puede superar los 20 caracteres.</div>
                 </div>
               </div>
+              
               <div class="form-group">
                 <label for="lastname">Apellido</label>
                 <input type="text" class="form-control" id="lastname" formControlName="lastname">
@@ -53,6 +47,7 @@
                   <div *ngIf="registerForm.controls['lastname'].errors?.['maxlength']">El apellido no puede superar los 20 caracteres.</div>
                 </div>
               </div>
+              
               <div class="form-group">
                 <label for="email">Email</label>
                 <input type="email" class="form-control" id="email" formControlName="email">
@@ -61,6 +56,7 @@
                   <div *ngIf="registerForm.controls['email'].errors?.['email']">El email no es válido.</div>
                 </div>
               </div>
+              
               <div class="form-group">
                 <label for="password">Contraseña</label>
                 <input type="password" class="form-control" id="password" formControlName="password">
@@ -69,6 +65,7 @@
                   <div *ngIf="registerForm.controls['password'].errors?.['minlength']">La contraseña debe tener al menos 8 caracteres.</div>
                 </div>
               </div>
+              
               <div class="form-group">
                 <label for="age">Edad</label>
                 <input type="number" class="form-control" id="age" formControlName="age">
@@ -77,6 +74,7 @@
                   <div *ngIf="registerForm.controls['age'].errors?.['max']">La edad no puede superar los 99 años.</div>
                 </div>
               </div>
+              
               <div class="form-group">
                 <label for="telephone">Teléfono</label>
                 <input type="text" class="form-control mb-4" id="telephone" formControlName="telephone">
@@ -85,14 +83,23 @@
                   <div *ngIf="registerForm.controls['telephone'].errors?.['maxlength']">El teléfono no puede superar los 9 caracteres.</div>
                 </div>
               </div>
-              <button type="button" class="btn btn-secondary w-100 mb-2" (click)="prevStep()">Anterior</button>
-              <button type="submit" class="btn btn-primary w-100">Registrarse</button>
-            </div>
-            <div *ngIf="error_message" class="alert alert-danger mt-3">{{error_message}}</div>
-          </form>
+              
+              <section>
+                <div class="form-group">
+                  <label for="map">Ubicación</label>
+                  <div id="map" class="mb-4"></div>
+                </div>
+              </section>
+
+              <button type="submit" class="btn btn-primary btn-block">Registrarse</button>
+
+              <div *ngIf="error_message" class="alert alert-danger mt-3">
+                {{ error_message }}
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 </main>
