--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -6,19 +6,29 @@
 .form-login{
     width: 90%;
 }
-.title-form{
-    font-family: "ThunderBlack";
-    font-size: 9em;
 
+.main-login{
+    height: 100vh !important;
 }
-@media (min-width: 450px) {
-    .main-login{
-        height: 100vh !important;
+
+@media (min-width: 1000px) {
+    .container-login{
+        max-width: 700px !important;
     }
 }
 
 @media (min-width: 768px) {
     .form-login{
         width: 40%;
+    }
+}
+
+@media (max-width: 500px) {
+    .title-form{
+        font-size: 6em;
+    }
+    .main-login{
+        padding-top: 5em;
+        justify-content: start !important;
     }
 }
