--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
-<main class="d-flex flex-column h-100 w-100 justify-content-center align-items-center main-login bg-black">
-  <div class="container"> 
-    <h1 class="mb-4 title-form">Bienvenido</h1>
+<main class="d-flex flex-column h-100 w-100 justify-content-center align-items-center main-login bg-black pt-5">
+  <div class="container container-tt"> 
+    <h1 class="my-4 title-form">Bienvenido</h1>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-login w-100">
       @if(error_message()){
       <div class="alert alert-danger" role="alert">{{error_message()}}</div>
@@ -21,7 +21,7 @@
           <div *ngIf="loginForm.controls['password'].errors?.['minlength']">La contraseña debe tener al menos 8 caracteres.</div>
         </div>
       </div>
-      <button type="submit" class="btn btn-primary w-100">Enviar</button>
+      <button type="submit" class="btn btn-primary w-100 btn-color-primary-tt">Enviar</button>
       <a href="/registrate" class="btn btn-link">Registrarse</a>
     </form>
   </div>
