--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -1,34 +1,30 @@
-.image-select {
-  cursor: pointer;
-  text-align: center;
-}
-
 .main-register{
-    height: 100%;
-    min-height: 100vh;
-}
-.title-form{
-  font-family: "ThunderBlack";
-  font-size: 9em;
+  height: auto !important;
+  color: white;
 
 }
-.image-select img {
-  width: 100px;
-  height: 100px;
-  border: 2px solid transparent;
-  border-radius: 10px;
+.icono-bienvenido{
+  height: 9em;
+}
+.main-login{
+  height: 100vh !important;
 }
 
-.image-select.selected img {
-  border-color: #007bff;
+@media (min-width: 768px) {
+  .form-login{
+      width: 40%;
+  }
 }
 
-.image-select div {
-  margin-top: 0.5rem;
-  font-weight: bold;
-  color: #ffffff;
+@media (max-width: 500px) {
+  .title-form{
+      font-size: 6em;
+  }
+  .main-login{
+      padding-top: 5em;
+      justify-content: start !important;
+  }
 }
-
 
 .map-container {
   position: absolute;
@@ -45,5 +41,6 @@
 }
 
 #map {
-  height: 100%;
+  width: 100%;
+  height: 350px; /* Ajusta esta altura según sea necesario */
 }
