--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,105 +1,106 @@
+<app-header></app-header>
 <main class="d-flex flex-column w-100 justify-content-center align-items-center main-register bg-black">
-  <div class="container">
-    <h1 class="mb-4 title-form text-white text-center">Registrate</h1>
-  
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card bg-black text-light">
-          <div class="card-body">
-            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-              <div class="form-group">
-                <label for="type">Tipo</label>
-                <select class="form-control" id="type" formControlName="type">
-                  <option value="">Selecciona el tipo</option>
-                  <option value="musician">Músico</option>
-                  <option value="band">Banda</option>
-                </select>
-                <div *ngIf="submitted && registerForm.controls['type'].invalid" class="text-danger mt-2">
-                  El tipo es obligatorio.
-                </div>
-              </div>
+  <div class="container container-tt">
+    <div class="d-flex justify-content-center">
+      <h1 class="title-form text-white text-center">Bienvenido</h1>
+      <img src="assets/img/Nota_caras.svg" class="icono-bienvenido">
+    </div>
+    <div *ngIf="error_message" class="alert alert-danger mt-3" id="alertError">
+      <pre>{{ error_message }}</pre>
+    </div>
 
-              <div class="form-group">
-                <label for="username">Nombre de usuario</label>
-                <input type="text" class="form-control" id="username" formControlName="username">
-                <div *ngIf="submitted && registerForm.controls['username'].invalid" class="text-danger">
-                  <div *ngIf="registerForm.controls['username'].errors?.['required']">El nombre de usuario es obligatorio.</div>
-                  <div *ngIf="registerForm.controls['username'].errors?.['maxlength']">El nombre de usuario no puede superar los 12 caracteres.</div>
-                </div>
-              </div>
-              
-              <div class="form-group">
-                <label for="name">Nombre</label>
-                <input type="text" class="form-control" id="name" formControlName="name">
-                <div *ngIf="submitted && registerForm.controls['name'].invalid" class="text-danger">
-                  <div *ngIf="registerForm.controls['name'].errors?.['required']">El nombre es obligatorio.</div>
-                  <div *ngIf="registerForm.controls['name'].errors?.['minlength']">El nombre debe tener al menos 2 caracteres.</div>
-                  <div *ngIf="registerForm.controls['name'].errors?.['maxlength']">El nombre no puede superar los 20 caracteres.</div>
-                </div>
-              </div>
-              
-              <div class="form-group">
-                <label for="lastname">Apellido</label>
-                <input type="text" class="form-control" id="lastname" formControlName="lastname">
-                <div *ngIf="submitted && registerForm.controls['lastname'].invalid" class="text-danger">
-                  <div *ngIf="registerForm.controls['lastname'].errors?.['required']">El apellido es obligatorio.</div>
-                  <div *ngIf="registerForm.controls['lastname'].errors?.['minlength']">El apellido debe tener al menos 2 caracteres.</div>
-                  <div *ngIf="registerForm.controls['lastname'].errors?.['maxlength']">El apellido no puede superar los 20 caracteres.</div>
-                </div>
-              </div>
-              
-              <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" id="email" formControlName="email">
-                <div *ngIf="submitted && registerForm.controls['email'].invalid" class="text-danger">
-                  <div *ngIf="registerForm.controls['email'].errors?.['required']">El email es obligatorio.</div>
-                  <div *ngIf="registerForm.controls['email'].errors?.['email']">El email no es válido.</div>
-                </div>
-              </div>
-              
-              <div class="form-group">
-                <label for="password">Contraseña</label>
-                <input type="password" class="form-control" id="password" formControlName="password">
-                <div *ngIf="submitted && registerForm.controls['password'].invalid" class="text-danger">
-                  <div *ngIf="registerForm.controls['password'].errors?.['required']">La contraseña es obligatoria.</div>
-                  <div *ngIf="registerForm.controls['password'].errors?.['minlength']">La contraseña debe tener al menos 8 caracteres.</div>
-                </div>
-              </div>
-              
-              <div class="form-group">
-                <label for="age">Edad</label>
-                <input type="number" class="form-control" id="age" formControlName="age">
-                <div *ngIf="submitted && registerForm.controls['age'].invalid" class="text-danger">
-                  <div *ngIf="registerForm.controls['age'].errors?.['required']">La edad es obligatoria.</div>
-                  <div *ngIf="registerForm.controls['age'].errors?.['max']">La edad no puede superar los 99 años.</div>
-                </div>
-              </div>
-              
-              <div class="form-group">
-                <label for="telephone">Teléfono</label>
-                <input type="text" class="form-control mb-4" id="telephone" formControlName="telephone">
-                <div *ngIf="submitted && registerForm.controls['telephone'].invalid" class="text-danger">
-                  <div *ngIf="registerForm.controls['telephone'].errors?.['minlength']">El teléfono debe tener 9 caracteres.</div>
-                  <div *ngIf="registerForm.controls['telephone'].errors?.['maxlength']">El teléfono no puede superar los 9 caracteres.</div>
-                </div>
-              </div>
-              
-              <section>
-                <div class="form-group">
-                  <label for="map">Ubicación</label>
-                  <div id="map" class="mb-4"></div>
-                </div>
-              </section>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="form-register">
+      <div class="form-group mt-2">
+        <label for="username">Nombre de usuario</label>
+        <input type="text" class="form-control" id="username" formControlName="username" placeholder="Introduzca el nombre de usuario">
+        <div *ngIf="submitted && registerForm.controls['username'].invalid" class="text-danger">
+          <div *ngIf="registerForm.controls['username'].errors?.['required']">El nombre de usuario es obligatorio.</div>
+          <div *ngIf="registerForm.controls['username'].errors?.['maxlength']">El nombre de usuario no puede superar los 12 caracteres.</div>
+        </div>
+      </div>
 
-              <button type="submit" class="btn btn-primary btn-block">Registrarse</button>
+      <div class="form-group mt-3">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" id="email" formControlName="email" placeholder="Introduzca el email">
+        <div *ngIf="submitted && registerForm.controls['email'].invalid" class="text-danger">
+          <div *ngIf="registerForm.controls['email'].errors?.['required']">El email es obligatorio.</div>
+          <div *ngIf="registerForm.controls['email'].errors?.['email']">El email no es válido.</div>
+        </div>
+      </div>
 
-              <div *ngIf="error_message" class="alert alert-danger mt-3">
-                {{ error_message }}
-              </div>
-            </form>
+      <div class="form-group mt-3">
+        <label for="password">Contraseña</label>
+        <input type="password" class="form-control" id="password" formControlName="password" placeholder="Introduzca la contraseña">
+        <div *ngIf="submitted && registerForm.controls['password'].invalid" class="text-danger">
+          <div *ngIf="registerForm.controls['password'].errors?.['required']">La contraseña es obligatoria.</div>
+          <div *ngIf="registerForm.controls['password'].errors?.['minlength']">La contraseña debe tener al menos 8 caracteres.</div>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="form-group col-6 mt-3">
+          <label for="name">Nombre</label>
+          <input type="text" class="form-control" id="name" formControlName="name" placeholder="Introduzca su nombre">
+          <div *ngIf="submitted && registerForm.controls['name'].invalid" class="text-danger">
+            <div *ngIf="registerForm.controls['name'].errors?.['required']">El nombre es obligatorio.</div>
+            <div *ngIf="registerForm.controls['name'].errors?.['minlength']">El nombre debe tener al menos 2 caracteres.</div>
+            <div *ngIf="registerForm.controls['name'].errors?.['maxlength']">El nombre no puede superar los 20 caracteres.</div>
+          </div>
+        </div>
+        
+        <div class="form-group col-6 mt-3">
+          <label for="lastname">Apellido</label>
+          <input type="text" class="form-control" id="lastname" formControlName="lastname" placeholder="Introduzca su apellido">
+          <div *ngIf="submitted && registerForm.controls['lastname'].invalid" class="text-danger">
+            <div *ngIf="registerForm.controls['lastname'].errors?.['required']">El apellido es obligatorio.</div>
+            <div *ngIf="registerForm.controls['lastname'].errors?.['minlength']">El apellido debe tener al menos 2 caracteres.</div>
+            <div *ngIf="registerForm.controls['lastname'].errors?.['maxlength']">El apellido no puede superar los 20 caracteres.</div>
           </div>
         </div>
       </div>
-    </div>
+      
+
+      
+      <div class="row">
+        <div class="form-group col-6 mt-3">
+          <label for="age">Edad</label>
+          <input type="number" class="form-control" id="age" formControlName="age" placeholder="Introduzca su edad">
+          <div *ngIf="submitted && registerForm.controls['age'].invalid" class="text-danger">
+            <div *ngIf="registerForm.controls['age'].errors?.['required']">La edad es obligatoria.</div>
+            <div *ngIf="registerForm.controls['age'].errors?.['max']">La edad no puede superar los 99 años.</div>
+          </div>
+        </div>
+        
+        <div class="form-group col-6 mt-3">
+          <label for="telephone">Teléfono <span class="form-optional">(opcional)</span></label>
+          <input type="text" class="form-control mb-4" id="telephone" formControlName="telephone" placeholder="Introduzca su télefono">
+          <div *ngIf="submitted && registerForm.controls['telephone'].invalid" class="text-danger">
+            <div *ngIf="registerForm.controls['telephone'].errors?.['minlength']">El teléfono debe tener 9 caracteres.</div>
+            <div *ngIf="registerForm.controls['telephone'].errors?.['maxlength']">El teléfono no puede superar los 9 caracteres.</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group mt-3">
+        <label for="icon">Foto de perfil <span class="form-optional">(opcional)</span></label>
+        <input type="file" class="form-control" id="icon" (change)="onFileChange($event)">
+      </div>
+      
+      <section>
+        <div class="form-group my-5">
+          <label for="map" class="mb-3">¿De donde eres?</label>
+          <div class="" style="overflow: hidden;border-radius: 1em;">
+            <div id="map"></div>
+          </div>
+          
+        </div>
+      </section>
+
+      <button type="submit" class="btn btn-primary btn-block w-100 btn-color-primary-tt mb-5">Registrarse</button>
+
+      
+    </form>
+    
   </div>
 </main>
