--- a/src/app/sharedComponents/header/header.component.html
+++ b/src/app/sharedComponents/header/header.component.html
@@ -1,25 +1,49 @@
-<header class="bg-black text-white p-3">
-    <div class="container-fluid d-flex justify-content-around align-items-center">
-      <div class="logo">
-        <h1 class="mb-0">Tempo Together</h1>
+<header class="text-light p-3 bg-black p-3">
+  <article class="container  d-flex justify-content-between">
+
+    <section class="logo">
+      <a routerLink="/"><img src="assets/img/Logo_horizontal.svg" alt="TempoTogether" class="logo-img"></a>
+    </section>
+
+    <section class="d-flex align-items-center position-relative search-container">
+      <input type="text" class="form-control mr-2 buscar" placeholder="Encuentra Bandas" (input)="buscar($event)">
+      <div class="search-results position-absolute w-100 bg-white text-dark mt-2 p-2 border rounded" *ngIf="searchResults.length > 0" style="z-index: 1000;">
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor="let result of searchResults" (click)="detalles(result)">
+            <div *ngIf="result.user_id">
+              <img [src]="result.icon" class="user-icon rounded-circle mr-2" alt="User Icon" width="30" height="30">
+              {{ result.username }}
+            </div>
+            <div *ngIf="result.band_id">
+              <i class="fas fa-music mr-2"></i>
+              {{ result.name }}
+            </div>
+          </li>
+        </ul>
       </div>
-      <div class="d-flex align-items-center">
-        <input type="text" class="form-control mr-2" placeholder="Encuentra Bandas">
-        @if(!logged()){
-          <a routerLink="/login"><button class="btn btn-secondary">Login</button></a>
-        }@else {
-          <button class="btn btn-secondary" (click)="cerrarSesion()">Logout</button>    
-          <div class="btn-group">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </button>
-            <ul class="dropdown-menu">
-              @if(user.type !== "band"){<li><a class="dropdown-item" routerLink="/registro-banda" routerLinkActive="active">Add Band</a></li>}
-              <li><a class="dropdown-item" href="#">Menu item</a></li>
-              <li><a class="dropdown-item" href="#">Menu item</a></li>
-            </ul>
-          </div> 
-        }
-      </div>
-    </div>
-  </header>
+    </section>
+
+    <section class="d-flex justify-content-center align-items-center gap-3">
+      @if(!logged()){
+        <a routerLink="/login"><button class="btn btn-login-tt d-flex align-items-center btn-color-primary-tt">Inicar sesión</button></a>
+        <a routerLink="/registrate"><button class="btn btn-registro-tt  d-flex align-items-center">Registro</button></a>
+
+      }@else {
+        <button class="btn btn-secondary btn-color-primary-tt" (click)="cerrarSesion()">Logout</button>    
+        <div class="btn-group">
+          <img [src]="getUserIcon()" class="user-icon rounded-circle" data-bs-toggle="dropdown" aria-expanded="false" width="30" height="30">
+          <ul class="dropdown-menu bg-secondary-tt">
+            @if(user.type !== "band"){
+              <li><a class="dropdown-item" routerLink="/registro-banda" routerLinkActive="active">Agregar banda</a></li>
+            }@else {
+              <li><a class="dropdown-item" routerLink="/miembros" routerLinkActive="active">Añadir miembros</a></li>
+
+            }
+            <li><a class="dropdown-item" href="/instrumentos">Mis Instrumentos</a></li>
+          </ul>
+        </div> 
+      }
+    </section>
+
+  </article>
+</header>
