--- a/src/app/sharedComponents/request/request.component.html
+++ b/src/app/sharedComponents/request/request.component.html
@@ -1,7 +1,7 @@
-<article class="request p-3">
+<article class="request p-3 rounded ">
     <section>
         <h3>{{request.title}}</h3>
-        <span>{{request.name}}</span>
+        <span class="subtitle-sm-tt">{{request.name}}</span>
     </section>
     <section>
         <section>
