--- a/src/app/pages/add-concert/add-concert.component.css
+++ b/src/app/pages/add-concert/add-concert.component.css
@@ -1,50 +1,37 @@
-.image-select {
-    cursor: pointer;
-    text-align: center;
+.main-login{
+  height: auto !important;
+  color: white;
+
+}
+.form-login{
+  width: 90%;
+}
+
+.title-form{
+  font-size: 8em;
+}
+.main-login{
+  height: 100vh !important;
+}
+
+@media (min-width: 1000px) {
+  .container-login{
+      max-width: 700px !important;
   }
-  
-  .main-register {
-    height: 100%;
-    min-height: 100vh;
+}
+
+@media (min-width: 768px) {
+  .form-login{
+      width: 40%;
   }
-  
-  .title-form {
-    font-family: "ThunderBlack";
-    font-size: 9em;
+}
+
+@media (max-width: 500px) {
+  .title-form{
+      font-size: 6em;
   }
-  
-  .image-select img {
-    width: 100px;
-    height: 100px;
-    border: 2px solid transparent;
-    border-radius: 10px;
+  .main-login{
+      padding-top: 5em;
+      justify-content: start !important;
   }
-  
-  .image-select.selected img {
-    border-color: #007bff;
-  }
-  
-  .image-select div {
-    margin-top: 0.5rem;
-    font-weight: bold;
-    color: #ffffff;
-  }
-  
-  .map-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: 30px;
-  }
-  
-  .map-frame {
-    border: 2px solid black;
-    height: 100%;
-  }
-  
-  #map {
-    height: 400px;
-  }
-  
+}
